--- a/kelas-5/Pulau-Bahasa-Indonesia/soal-petualangan3.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/soal-petualangan3.html
@@ -80,7 +80,9 @@ button {
     border-radius: 5px;
     margin-top: 10px;
 }
-button:hover { background-color: #0056b3; }
+button:hover {
+    background-color: #0056b3;
+}
 .popup {
     position: fixed;
     top: 50%;
@@ -95,6 +97,7 @@ button:hover { background-color: #0056b3; }
     font-weight: bold;
     animation: pop 0.3s ease-out;
     max-width: 90%;
+    background: white;
 }
 .popup-warning {
     background: #fff3cd;
@@ -137,143 +140,190 @@ button:hover { background-color: #0056b3; }
         🕵️ Detektif Cilik Ayo Uji Kepintaranmu
     </h1>
 
-    <!-- FORM IDENTITAS -->
-    <div id="identitas">
-        <div class="kotak-soal">
-            <label>Nama: <input type="text" id="nama" oninput="mainkanSuaraKetik()"></label><br><br>
-            <label>Kelas: <input type="text" id="kelas" oninput="mainkanSuaraKetik()"></label><br><br>
-            <label>No Absen: <input type="number" id="absen" oninput="mainkanSuaraKetik()"></label><br><br>
-            <button onclick="mulaiKuis()">🚀 Mulai Kuis</button>
-        </div>
+    <!-- Form Identitas -->
+    <div id="formIdentitas" style="background:white;padding:20px;border-radius:10px;border:2px solid #add8e6;max-width:400px;">
+        <h3>Isi Identitas Dulu Yuk!</h3>
+        <input type="text" id="nama" placeholder="Nama" oninput="mainkanSuaraKetik()" style="width:100%;margin:5px;padding:8px;"><br>
+        <input type="text" id="kelas" placeholder="Kelas" oninput="mainkanSuaraKetik()" style="width:100%;margin:5px;padding:8px;"><br>
+        <input type="number" id="absen" placeholder="No Absen" oninput="mainkanSuaraKetik()" style="width:100%;margin:5px;padding:8px;"><br>
+        <button onclick="mulaiKuis()">🚀 Mulai Kuis</button>
     </div>
 
+    <!-- Area Kuis -->
     <div id="quiz" style="display:none;"></div>
 </div>
 
-<!-- AUDIO -->
+<!-- Audio -->
 <audio id="suaraKetik" src="../../suara/typing.mp3"></audio>
-<audio id="suaraKlik" src="../../suara/mouse-clicks.mp3"></audio>
-<audio id="suaraMulai" src="../../suara/swoosh.mp3"></audio>
+<audio id="suaraNext" src="../../suara/next.mp3"></audio>
 <audio id="suaraUlangi" src="../../suara/ulangi.mp3"></audio>
+<audio id="suaraKlik" src="../../suara/mouse-clicks.mp3"></audio>
 <audio id="suaraPeringatan" src="../../suara/tada-234709.mp3"></audio>
 
 <script>
 let soal = [
-   { q: "Informasi tersurat adalah…", 
-     a: ["Informasi tidak langsung", "Informasi langsung di teks", "Informasi yang memerlukan tafsiran", "Memerlukan pengetahuan tambahan"], k: 1 },
-   { q: "Ide pokok disebut juga…", 
-     a: ["Ide tambahan", "Pikiran tambahan", "Gagasan pokok atau pikiran utama", "Informasi tambahan"], k: 2 },
-   { q: "Contoh informasi tersurat dari kalimat “Dina pergi ke pasar pada pukul 07.00 pagi untuk membeli sayur dan buah” adalah…", 
-     a: ["Dina senang pergi ke pasar", "Dina pergi ke pasar", "Dina lapar", "Dina sedang memasak"], k: 1 },
-   { q: "Informasi tersirat memerlukan…", 
-     a: ["Membaca sekilas", "Pengetahuan umum/pengalaman pribadi", "Menghafal kalimat utama", "Membaca judul"], k: 1 },
-   { q: "Ide pendukung berfungsi untuk…", 
-     a: ["Mengganti ide pokok", "Menjelas atau menguatkan ide pokok", "Mengurangi isi teks", "Membuat teks singkat"], k: 1 },
-   { q: "Untuk menemukan informasi dalam teks, kita harus…", 
-     a: ["Membaca sebagian teks", "Membaca/simak seluruh teks saksama", "Menghafalkan ide pokok", "Melihat ilustrasi saja"], k: 1 },
-   { q: "Informasi tersurat diperoleh dengan…", 
-     a: ["Menebak isi teks", "Membaca & menafsirkan", "Melihat informasi tertulis langsung", "Menggunakan pengetahuan umum"], k: 2 },
-   { q: "Ciri ide pokok adalah…", 
-     a: ["Sangat detail", "Bersifat umum & dapat dijabarkan", "Berupa opini", "Hanya ada di judul"], k: 1 },
-   { q: "Perbedaan informasi tersurat dan tersirat adalah…", 
-     a: ["Tersurat tidak perlu dibaca", "Tersurat tertulis langsung, tersirat tidak", "Tersurat butuh pengetahuan umum", "Tersurat & tersirat sama"], k: 1 },
-   { q: "Kalimat “Ayah membawa payung saat keluar rumah” – informasi tersuratnya adalah…", 
-     a: ["Ayah takut hujan", "Ayah membawa payung", "Ayah ingin bepergian jauh", "Ayah sakit"], k: 1 }
+  { q: "Informasi tersurat adalah…", 
+    a: ["Informasi yang disampaikan tidak langsung di teks", "Informasi yang disampaikan secara langsung di teks", "Informasi yang memerlukan penafsiran", "Informasi yang memerlukan pengetahuan tambahan"], k: 1 },
+  { q: "Ide pokok disebut juga…", 
+    a: ["Ide tambahan", "Pikiran tambahan", "Gagasan pokok atau pikiran utama", "Informasi tambahan"], k: 2 },
+  { q: "Contoh informasi tersurat dari kalimat “Dina pergi ke pasar pada pukul 07.00 pagi untuk membeli sayur dan buah” adalah…", 
+    a: ["Dina senang pergi ke pasar", "Dina pergi ke pasar", "Dina lapar", "Dina sedang memasak"], k: 1 },
+  { q: "Informasi tersirat memerlukan…", 
+    a: ["Membaca sekilas", "Pengetahuan umum atau pengalaman pribadi", "Menghafal kalimat utama", "Membaca judul"], k: 1 },
+  { q: "Ide pendukung berfungsi untuk…", 
+    a: ["Mengganti ide pokok", "Menjelas atau menguatkan ide pokok", "Mengurangi isi teks", "Membuat teks lebih singkat"], k: 1 },
+  { q: "Untuk menemukan informasi dalam teks, kita harus…", 
+    a: ["Membaca sebagian teks", "Membaca atau menyimak teks secara menyeluruh dan saksama", "Menghafalkan ide pokok", "Melihat ilustrasi saja"], k: 1 },
+  { q: "Informasi tersurat dapat diperoleh dengan…", 
+    a: ["Menebak isi teks", "Membaca seluruh teks dan menafsirkannya", "Melihat informasi yang tertulis langsung di teks", "Menggunakan pengetahuan umum"], k: 2 },
+  { q: "Ciri ide pokok adalah…", 
+    a: ["Bersifat sangat detail", "Bersifat umum dan dapat dijabarkan", "Berupa opini", "Hanya ada di judul"], k: 1 },
+  { q: "Perbedaan informasi tersurat dan tersirat adalah…", 
+    a: ["Tersurat tidak perlu dibaca, tersirat perlu dibaca", "Tersurat tertulis langsung, tersirat tidak tertulis langsung", "Tersurat memerlukan pengetahuan umum, tersirat tidak", "Tersurat dan tersirat sama"], k: 1 },
+  { q: "Kalimat “Ayah membawa payung saat keluar rumah” – informasi tersuratnya adalah…", 
+    a: ["Ayah takut hujan", "Ayah membawa payung", "Ayah ingin berpergian jauh", "Ayah sedang sakit"], k: 1 }
 ];
 
-let indeks = 0, benar = 0;
+let indeks = 0;
+let benar = 0;
 
-// === IDENTITAS ===
+// fungsi mulai kuis
 function mulaiKuis(){
-    let nama = document.getElementById("nama").value.trim();
-    let kelas = document.getElementById("kelas").value.trim();
-    let absen = document.getElementById("absen").value.trim();
+    const nama = document.getElementById("nama").value.trim();
+    const kelas = document.getElementById("kelas").value.trim();
+    const absen = document.getElementById("absen").value.trim();
     if(!nama || !kelas || !absen){
         mainkanSuaraPeringatan();
-        tampilkanPopup("🌟 Isi dulu identitasmu ya! Nama, kelas, dan absen biar seru!", "popup-warning");
+        tampilkanPopup("⚡ Wah, isi dulu identitasmu biar semangat dan sah jadi detektif cilik! 😃", "popup-warning");
         return;
     }
-    mainkanSuaraMulai();
-    document.getElementById("identitas").style.display="none";
-    document.getElementById("quiz").style.display="block";
+    mainkanSuaraNext();
+    document.getElementById("formIdentitas").style.display = "none";
+    document.getElementById("quiz").style.display = "block";
     acakArray(soal);
-    soal.forEach(s=>acakJawabanSoal(s));
+    soal.forEach(s => acakJawabanSoal(s));
     tampilkanSoal();
 }
 
-// === RANDOM ===
-function acakArray(arr){ for(let i=arr.length-1;i>0;i--){let j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];} }
-function acakJawabanSoal(s){
-    let gabung = s.a.map((teks,i)=>({teks, benar:i===s.k}));
-    for(let i=gabung.length-1;i>0;i--){let j=Math.floor(Math.random()*(i+1));[gabung[i],gabung[j]]=[gabung[j],gabung[i]];}
-    s.a=gabung.map(o=>o.teks); s.k=gabung.findIndex(o=>o.benar);
+function acakArray(arr) {
+    for (let i = arr.length - 1; i > 0; i--) {
+        let j = Math.floor(Math.random() * (i + 1));
+        [arr[i], arr[j]] = [arr[j], arr[i]];
+    }
 }
+function acakJawabanSoal(s) {
+    let gabung = s.a.map((teks, i) => ({ teks, benar: i === s.k }));
+    for (let i = gabung.length - 1; i > 0; i--) {
+        let j = Math.floor(Math.random() * (i + 1));
+        [gabung[i], gabung[j]] = [gabung[j], gabung[i]];
+    }
+    s.a = gabung.map(o => o.teks);
+    s.k = gabung.findIndex(o => o.benar);
+}
+function tampilkanSoal() {
+    const quiz = document.getElementById("quiz");
+    if (indeks >= soal.length) {
+        const nilai = Math.round((benar / soal.length) * 100);
+        let peringkat = "";
+        let kelasPopup = "popup-success";
+        let warnaNilai = "nilai-merah";
 
-// === TAMPILKAN SOAL ===
-function tampilkanSoal(){
-    const quiz=document.getElementById("quiz");
-    if(indeks>=soal.length){
-        const nilai=Math.round((benar/soal.length)*100);
-        kirimNilai(nilai);
-        let pesan="",kelasPopup="popup-success",warna="nilai-merah";
-        if(nilai===100){pesan="🏆 Luar biasa! Kamu benar semua!";kelasPopup="popup-gold";warna="nilai-emas";}
-        else if(nilai>=80){pesan="🥈 Hebat! Tinggal sedikit lagi!";warna="nilai-hijau";}
-        else if(nilai>=60){pesan="🥉 Lumayan! Tingkatkan lagi!";warna="nilai-kuning";}
-        else{pesan="💡 Jangan menyerah, ayo coba lagi!";}
-        tampilkanPopupHasil(`🎉 Selesai!<br>Benar: ${benar}/${soal.length}<br>
-        Nilai: <span class="nilai-besar ${warna}">${nilai}</span><br>${pesan}`,kelasPopup);
+        if (nilai === 100) {
+            peringkat = "🏆 Luar biasa! Kamu benar semua!";
+            kelasPopup = "popup-gold";
+            warnaNilai = "nilai-emas";
+        } else if (nilai >= 80) {
+            peringkat = "🥈 Hebat! Hanya sedikit lagi menuju sempurna!";
+            warnaNilai = "nilai-hijau";
+        } else if (nilai >= 60) {
+            peringkat = "🥉 Lumayan! Tingkatkan lagi biar makin mantap!";
+            warnaNilai = "nilai-kuning";
+        } else {
+            peringkat = "💡 Jangan menyerah, ayo coba lagi!";
+            warnaNilai = "nilai-merah";
+        }
+
+        // kirim ke Google Form
+        const nama = document.getElementById("nama").value.trim();
+        const kelas = document.getElementById("kelas").value.trim();
+        const absen = document.getElementById("absen").value.trim();
+        fetch("https://docs.google.com/forms/u/0/d/e/1FAIpQLSfRI7tTbYodomVQeAt-nyjYsDk7sRkk1S1L7y0UvzsEoN0mGQ/formResponse", {
+            method: "POST",
+            body: new URLSearchParams({
+                "entry.1114641071": nama,
+                "entry.687539915": kelas,
+                "entry.1445858210": absen,
+                "entry.175130881": nilai
+            })
+        });
+
+        tampilkanPopupHasil(`
+            🎉 Selesai!<br>
+            Benar: ${benar} / ${soal.length}<br>
+            Nilai: <span class="nilai-besar ${warnaNilai}">${nilai}</span>
+            <span>${peringkat}</span>
+        `, kelasPopup);
         return;
     }
-    const s=soal[indeks];
-    quiz.innerHTML=`
+    const s = soal[indeks];
+    quiz.innerHTML = `
     <div class="kotak-soal">${s.q}</div>
     <div class="answers">
-        ${s.a.map((j,i)=>`<label><input type="radio" name="jawaban" value="${i}" onclick="mainkanSuaraKlik()"> ${j}</label>`).join('')}
+        ${s.a.map((j, i) => `
+            <label>
+                <input type="radio" name="jawaban" value="${i}" onclick="mainkanSuaraKlik()" /> 
+                ${j}
+            </label>`).join('')}
     </div>
-    <button onclick="periksaJawaban()">Next</button>`;
+    <button onclick="periksaJawaban()">Next</button>
+    `;
 }
-function periksaJawaban(){
-    const jawaban=document.querySelector('input[name="jawaban"]:checked');
-    if(!jawaban){mainkanSuaraPeringatan();tampilkanPopup("🎯 Pilih jawaban dulu ya, semangat!", "popup-warning");return;}
-    if(parseInt(jawaban.value)===soal[indeks].k) benar++;
-    indeks++; mainkanSuaraMulai(); tampilkanSoal();
+function periksaJawaban() {
+    const jawaban = document.querySelector('input[name="jawaban"]:checked');
+    if (!jawaban) {
+        mainkanSuaraPeringatan();
+        tampilkanPopup("🎯 Ayo pilih dulu jawabanmu, semangat detektif cilik!", "popup-warning");
+        return;
+    }
+    if (parseInt(jawaban.value) === soal[indeks].k) benar++;
+    indeks++;
+    mainkanSuaraNext();
+    tampilkanSoal();
+}
+function tampilkanPopup(teks, kelas = "popup-warning") {
+    const popup = document.createElement("div");
+    popup.className = `popup ${kelas}`;
+    popup.innerHTML = teks;
+    document.body.appendChild(popup);
+    setTimeout(() => popup.remove(), 3000);
+}
+function tampilkanPopupHasil(teks, kelas) {
+    const popup = document.createElement("div");
+    popup.className = `popup ${kelas}`;
+    popup.innerHTML = `${teks}<br><br>
+        <button onclick="muatUlang()">🔄 Mulai Lagi</button>
+        <button onclick="selesaiKuis()">❌ Selesai</button>`;
+    document.body.appendChild(popup);
+}
+function muatUlang() {
+    document.querySelectorAll('.popup').forEach(p => p.remove());
+    indeks = 0;
+    benar = 0;
+    acakArray(soal);
+    soal.forEach(s => acakJawabanSoal(s));
+    tampilkanSoal();
+    mainkanSuaraUlangi();
+}
+function selesaiKuis(){
+    window.location.href = "🕵Petualangan-Seru.html";
 }
 
-// === POPUP ===
-function tampilkanPopup(teks,kelas="popup-warning"){
-    const p=document.createElement("div");p.className=`popup ${kelas}`;p.innerHTML=teks;
-    document.body.appendChild(p);setTimeout(()=>p.remove(),3000);
-}
-function tampilkanPopupHasil(teks,kelas){
-    const p=document.createElement("div");p.className=`popup ${kelas}`;
-    p.innerHTML=`${teks}<br><br>
-    <button onclick="muatUlang()">🔄 Ulangi</button>
-    <button onclick="selesai()">❌ Selesai</button>`;
-    document.body.appendChild(p);
-}
-function muatUlang(){document.querySelectorAll('.popup').forEach(p=>p.remove());indeks=0;benar=0;acakArray(soal);soal.forEach(s=>acakJawabanSoal(s));mainkanSuaraUlangi();tampilkanSoal();}
-function selesai(){location.reload();}
-
-// === SUARA ===
-function mainkanSuaraKlik(){let s=document.getElementById("suaraKlik");s.currentTime=0;s.play();}
-function mainkanSuaraMulai(){let s=document.getElementById("suaraMulai");s.currentTime=0;s.play();}
-function mainkanSuaraUlangi(){let s=document.getElementById("suaraUlangi");s.currentTime=0;s.play();}
-function mainkanSuaraPeringatan(){let s=document.getElementById("suaraPeringatan");s.currentTime=0;s.play();}
-function mainkanSuaraKetik(){let s=document.getElementById("suaraKetik");s.currentTime=0;s.play();}
-
-// === KIRIM NILAI ===
-function kirimNilai(nilai){
-    let nama=document.getElementById("nama").value;
-    let kelas=document.getElementById("kelas").value;
-    let absen=document.getElementById("absen").value;
-    let formURL="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfRI7tTbYodomVQeAt-nyjYsDk7sRkk1S1L7y0UvzsEoN0mGQ/formResponse";
-    let data=new FormData();
-    data.append("entry.1114641071",nama);
-    data.append("entry.687539915",kelas);
-    data.append("entry.1445858210",absen);
-    data.append("entry.175130881",nilai);
-    fetch(formURL,{method:"POST",body:data,mode:"no-cors"});
-}
+// Suara
+function mainkanSuaraKetik(){ const s=document.getElementById("suaraKetik"); s.currentTime=0; s.play();}
+function mainkanSuaraNext(){ const s=document.getElementById("suaraNext"); s.currentTime=0; s.play();}
+function mainkanSuaraUlangi(){ const s=document.getElementById("suaraUlangi"); s.currentTime=0; s.play();}
+function mainkanSuaraKlik(){ const s=document.getElementById("suaraKlik"); s.currentTime=0; s.play();}
+function mainkanSuaraPeringatan(){ const s=document.getElementById("suaraPeringatan"); s.currentTime=0; s.play();}
 </script>
 </body>
 </html>
